--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
       <div class="col-sm-12">
         <div class="text-center cen2" ><br>
-        <a href="fresh.html"><button class="btn btn-success btn-lg"  data-toggle="modal" data-target="#exampleModal"><h5>Download App Now </h5></button></a><br><br><br><br>
+        <a href="#"><button class="btn btn-success btn-lg"  data-toggle="modal" data-target="#exampleModal"><h5>Download App Now </h5></button></a><br><br><br><br>
         </div>
       </div>
     </div>
